# biped-kinematics

./: README.md
pcpc/: CMakeLists.txt  package.xml  testesgCMfdfdsakeLists.txt
pcpc/src/: FootStepPlanner.cpp  FootStepPlanner.h  GaitPatternGenerator.cpp  GaitPatternGenerator.h  Kinematics.cpp  Kinematics.h  Kinematics_GankenKun.cpp  LinkParameter_GankenKun.h  MainControl.cpp  MainControl.h  PreCalculatedPreviewControl.h  PreviewControl.cpp  main.cpp  org_main.cpp  plot.cpp  plot.h  test.csv
src/: CMakeLists.txt
src/Motion/: ControlZMP_hrz_u.h  misc.h
src/ProcessTimeComparison/PolynomialApproximationTest/: CMakeLists.txt  PolynomialApproximation.cpp  footpos_pattern.csv
src/ProcessTimeComparison/PreviewControl/: CMakeCache.txt  CMakeLists.txt  GaitPatternGenerator.cpp  GaitPatternGenerator.h  Jacobian.cpp  Jacobian.h  Link.cpp  Link.h  LinkParameter.h  MainControl.cpp  MainControl.h  Makefile  PlanCommon.h  PreCalculatedPreviewControl.cpp  PreviewControl.h  cmake_install.cmake  main.cpp
src/kinematics/Manip/: CMakeLists.txt  demoManipLink.h  kinematics.cpp  kinematics.h  link.cpp  link.h  main.cpp  mainsim.cpp  pi.h
src/kinematics/demo/: demo_biped_link.h  jacobian.cpp  kinematics.cpp  mainsim.cpp  memo.txt
src/kinematics/demo_biped/: cmd.cpp  doc.c  jacobian.cpp  jacobian.h  kinematics.cpp  kinematics.h  link.h  mainsim.cpp  pi.cpp
src/old_ver/demo_Mani/: CMakeCache.txt  CMakeLists.txt  Makefile  RunKinema  cmake_install.cmake  demoManipLink.h  gl_CMakeLists.txt  jacobian.cpp  jacobian.h  kinematics.cpp  kinematics.h  link.h  main.cpp  pi.cpp  pi.h  plot.cpp  plot.h
src/old_ver/kinema/: CMakeLists.txt  jacobian.cpp  kinematics.cpp  link.cpp  link.h
src/old_ver/kinema-ver1/: kinematics.h
src/old_ver/kinema-ver1-01/: CMakeLists.txt  jacobian.h  link.h  pi.h  plot.cpp
src/patten/: CMakeLists.txt
src/patten/CapturePoint/: SystemLIP.cpp
src/patten/CapturePoint/tools/: RungeKutta.h
src/patten/LIP/: CMakeLists.txt
src/patten/TEST/: CMakeLists.txt  SpringMass.cpp
src/patten/TEST/tools/: CMakeLists.txt  RungeKutta.cpp
src/sample/: CMakeLists.txt
src/sample/Biped/: CMakeLists.txt  Jacobian.h  Kinematics.h  Link.cpp  Link.h  cmd.h  demoBipedLink.h  demoParallelLink.h  mainsim.cpp  plot.cpp
src/sample/Manipulator/: Link.h
src/sample/Parallel_biped/: CMakeCache.txt  CMakeLists.txt  Jacobian.cpp  Kinematics.cpp  Link.cpp  Makefile  cmake_install.cmake  demoBipedLink.h  hoge.cpp  mainsim.cpp  plot.cpp
src/sample/SERIAL/: CMakeLists.txt  Jacobian.cpp  Jacobian.h  Kinematics.cpp  Kinematics.h  Link.cpp  Link.h  LinkParameter.h  MainControl.cpp  MainControl.h  check_link_main.cpp  main.cpp  main0.cpp  old_main.cpp
src/sample/SERIAL/arm-control/: Link.h  LinkParameter.h
src/sample/biped/: CMakeLists.txt
src/sample/biped/parallel_biped/: CMakeCache.txt  CMakeLists.txt  Kinematics.cpp  Link.cpp  Makefile  cmake_install.cmake  cmd.cpp  demoBipedLink.h  mainsim.cpp  plot.cpp  plot.h
src/sample/biped/serial_biped/: CMakeCache.txt  CMakeLists.txt  Kinematics.h  Makefile  cmake_install.cmake  mainsim.cpp
src/sample/manipulator/: CMakeLists.txt  Jacobian.h  Makefile  cmake_install.cmake  demoManipLink.h
src/serial/: CMakeLists.txt
src/serial/Dev/: CMakeLists.txt  mainsim.cpp
src/serial/class_kinema/: .kinematics.h.swp  CMakeCache.txt  Makefile  RunKinema  angledata.csv  cmake_install.cmake  cmd.cpp  demo_biped_link.h  jacobian.cpp  kinematics.cpp  kinematics.h  link.cpp  main.cpp  mainsim.cpp  robot.cpp  robot.h
src/serial/demo_Mani/: demoManipLink.h  kinematics.cpp  kinematics.h  link.cpp  link.h  mainsim.cpp  pi.h  plot.cpp
src/serial/kinema/: CMakeLists.txt  RunKinema  angledata.csv  angledataLM.xlsx  angledataNR.xlsx  cmd.cpp  demo_biped_link.h  jacobian.h  kinematics.cpp  kinematics.h  link.cpp  link.h  main.cpp  pi.cpp  pi.h  plot.cpp  plot.h  robot.cpp  robot.h
src/serial/kinema/TEST/: mainsim.cpp  test_elem.cpp
