<?xml version="1.0"?>
<package format="2">
  <name>pcpc</name>
  <version>0.0.0</version>
  <description>The pcpc package</description>

  <maintainer email="akira794@todo.todo">akira794</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
